Updated task images + launch script
Updated the general pipeline to run remote pipelines on 3 clusters (x86,
Power and Z).
Launch script uses OpenShift server URLs another script (servers.sh).
Updated build images for remote task to use multi-architecture images.

--- a/local-cluster-pipelines/execute-remote-pipeline.yaml
+++ b/local-cluster-pipelines/execute-remote-pipeline.yaml
@@ -50,6 +50,7 @@ spec:
 
       oc login \
         --token "$OPENSHIFT_TOKEN" \
+        --insecure-skip-tls-verify \
         "$(params.openshift-server-url)"
 
       PIPELINERUN=$(
