Added build-namespace on trigger template

--- a/argocd-applications/prod/checkoutservice.yaml
+++ b/argocd-applications/prod/checkoutservice.yaml
@@ -6,7 +6,7 @@ metadata:
     env: prod
 spec:
   destination:
-    name: opal | ppc64le on-prem
+    name: diamond | s390x on-prem
     namespace: multiarch-demo-prod
   project: online-boutique
   source:
