--- a/argocd-applications/prod/frontend.yaml
+++ b/argocd-applications/prod/frontend.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: frontend-opal
+  name: frontend-prod
   labels:
     env: prod
 spec:
