ArgoCD applications server names + mpt trigger

--- a/argocd-applications/prod/cartservice.yaml
+++ b/argocd-applications/prod/cartservice.yaml
@@ -6,7 +6,7 @@ metadata:
     env: prod
 spec:
   destination:
-    name: topaz | x86 on-prem
+    name: topaz
     namespace: multiarch-demo-prod
   project: online-boutique
   source:
