--- a/argocd-applications/prod/productcatalogservice.yaml
+++ b/argocd-applications/prod/productcatalogservice.yaml
@@ -6,7 +6,7 @@ metadata:
     env: prod
 spec:
   destination:
-    name: diamond | s390x on-prem
+    name: diamond
     namespace: multiarch-demo-prod
   project: online-boutique
   source:
