--- a/argocd-applications/test/recommendationservice.yaml
+++ b/argocd-applications/test/recommendationservice.yaml
@@ -6,7 +6,7 @@ metadata:
     env: test
 spec:
   destination:
-    name: opal | ppc64le on-prem
+    name: opal
     namespace: multiarch-demo-test
   project: online-boutique
   source:
