--- a/terraform-setup/apply-on-master-cluster/imgrel.yaml
+++ b/terraform-setup/apply-on-master-cluster/imgrel.yaml
@@ -39,13 +39,13 @@ spec:
           valueFrom:
             secretKeyRef:
               key: REGISTRY_USER
-              name: registry-access
+              name: docker-registry-access
               optional: true
         - name: REGISTRY_PASSWORD
           valueFrom:
             secretKeyRef:
               key: REGISTRY_PASSWORD
-              name: registry-access
+              name: docker-registry-access
               optional: true
         - name: VAULT_INSTANCE_ID
           valueFrom:
