--- a/terraform-setup/apply-on-builder-clusters/build-tag-push-task.yaml
+++ b/terraform-setup/apply-on-builder-clusters/build-tag-push-task.yaml
@@ -80,13 +80,13 @@ spec:
         - name: REGISTRY_USER
           valueFrom:
             secretKeyRef:
-              name: registry-access
+              name: docker-registry-access
               key: REGISTRY_USER
               optional: true
         - name: REGISTRY_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: registry-access
+              name: docker-registry-access
               key: REGISTRY_PASSWORD
               optional: true
         - name: IBM_ENTITLED_REGISTRY_USER
